--- a/src/common/assets/css/index.css
+++ b/src/common/assets/css/index.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+
+::-webkit-scrollbar { width: 2px;  }
+::-webkit-scrollbar-thumb { background-color: #a0a0a0; border-radius: 2px; }
+::-webkit-scrollbar-thumb:hover {background-color: #a0a0a0; }
+::-webkit-scrollbar-track { background-color: #000000; border-radius: 6px; } 
+::-webkit-scrollbar-corner { background-color: #000000; }
